# ollama-acp

./: LICENSE  MANIFEST.in  Makefile  pyproject.toml
ollama_acp/: __init__.py  agent.py  cli.py
